"Updates to Section III of the Applied Physics Review paper. Edits have been made to the "Dimensionality Reduction" and "Surrogate Modeling" sections."

--- a/nate-am-review/SectionIII/ReducingComputationalComplexity.tex
+++ b/nate-am-review/SectionIII/ReducingComputationalComplexity.tex
@@ -1,47 +1,32 @@
-\subsubsection{Reducing Computational Complexity}
-Models of physical phenomena often begin with first principles, such as Newton's second law, Fourier's heat transfer equation, the Maxwell Equations, Schr\"odinger's equation, and the list continues. Terms in each equation are then expounded upon, incorporating other physical models of forces, energies, potentials, and more. The computational expense of a model is determined by how much physics is incorporated and the resolution at which the problem is modeled, among many other considerations. One workaround is better computers that can handle a larger I/O stream. Another approach is reduce the number of operations performed while still achieving a good enough description of the underlying physics.
+\subsubsection{Model Complexity and Dimensionality Reduction}
+A bottleneck in ICME approaches is the number of different models required to simulate all physics during additive manufacturing. The spatiotemporal scales that \textit{could} be taken into consideration for AM process modeling span microns to meters. A full ICME approach to AM process modeling incorporates modeling efforts across phase field methods, cellular automata, finite element, direct element, and more. At the smallest scale the feedstock, heat source, and melt pool dynamics have been modeled by finite element methods \cite{Toyserkani2004, Khairallah2016, Manvatkar2014} or finite  volume methods \cite{Dai2014}. Microstructure growth from the melt pool is often the next phenomenon to be studied and has been modeled through phase field \cite{Chen2002, Gong2015, Kundin2015, Sahoo2016}, cellular automata \cite{Tan2011}, or finite element methods \cite{Nie2014}. Thermal histories of entire parts or sections can be modeled next, typically by finite element methods. Thermal history models look at heat transfer through the part \cite{Michaleris2014}, residual stress build up during manufacturing \cite{Pal2014, Ding2011}, and thermal history such as cooling rate and temperature gradient \cite{Li2014, Raghavan2016}. Full ICME approaches involve modeling the AM process at all these steps, along with experimental investigations, to determine the full processing route for an AM metal. Journal articles have also been published on full-scale ICME modeling studies of AM, such as that of Martukanitz et al. \cite{Martukanitz2014}. A review of ICME approaches across spatiotemporal scales can be found at \cite{Francois2017} and a review of the physics of AM modeling can be found at \cite{King2015a}. A review of finite element methods specifically for AM can be found at \cite{Gouge2018}. 
 
-Scientific endeavors are focused around descriptions of physical phenomena that are as accurate as possible. From an engineering and process modeling perspective, having a model that is `good enough' at modeling the phenomenon suffices. In this case, `good enough' means the model makes accurate predictions for the engineering application. Currently existing computational models can be downsized to be just `good enough' by analysis of which physics actually need to be incorporated to accurately predict the final result. 
+For many engineering studies of AM not all of these physics \textit{need} to be modeled or included. The complexity of AM, however, obscures which physics are relevant to a given final property. When considering the design space of additive, listing out the possible parameters and properties to model illustrates the complexity of modeling. A data point in the AM process could be written as a vector 
+\eqn
+\begin{split}
+	\mathbf{x} & =  {\large(} \text{Laser Power}, \text{Laser Speed}, \text{Laser Spot Size}, \hdots \\
+			& \text{Energy Density} , \text{Alloy}, \text{Build Time}, \hdots \\
+			&\text{Build Orientation},   \text{Hardness}, \text{Ultimate Tensile Strength}, \hdots \\
+			& \text{Toughness}, \text{Porosity}, \text{Surface Roughness}, \hdots \large{)}. \\
+\end{split}
+\equ
+By some estimates, the vectors $\mathbf{x}$ could be 160 variables long if only accounting for tunable machine parameters. Material properties also need to be considered when searching for correlations, adding to the length of $\mathbf{x}$. Some of the machine parameters in $\mathbf{x}$ will be correlated, like laser speed and energy density. Some of the material properties will be be correlated, such as surface roughness and ultimate tensile strength. Surely, the machine settings will be correlated to material properties. The size of a data space $\mathbf{X}$ can grow quickly in additive manufacturing. This problem motivates using computational models which balance accuracy with computational complexity.
 
-A combinatorial approach can be employed to determine the most important inputs of a simulation by iterating through many possible manufacturing conditions and evaluating the difference in results. Many simulations can be run and then analyzed for conditions such as computation time or accuracy with experimental results. Similarly, running a test matrix of manufacturing conditions can also give insight to the \textit{best} conditions for a desired part property, like density. Kamath et al. applied a random forest algorithm to both of these ends. Their goal was to find the most important manufacturing conditions impacting melt pool depth and predict the best melt pool conditions to produce fully dense 316L stainless steel parts. To understand why Kamath's study was successful, it is necessary to understand the basics of random forest algorithms. 
+Determining which machine parameters are correlated aids in reducing computational complexity by identifying which machine parameters can be ignored during simulation. If two or more parameters are heavily correlated, then simulating one should implicitly reveal the other. 
 
-Two key strengths of the random forest algorithm are its ease of use and its quick training time. Random forests are easy to use because they do not require tuning many hyper-parameters. Furthermore, random forests are very good at sifting through many irrelevant features to find the features that actually matter. They do not require data scaling or feature selection. Random forest training is also computationally inexpensive and easily parallelized. Random forests provide two advantages that are particularly important in the context of materials science: the ability to efficiently calculate uncertainty estimates and the added interpretability of feature importance metrics. Based on their ensemble nature, it is possible to generate uncertainty estimates for random forest predictions using jackknife-based procedures~\cite{Efron1992, Efron2014, Wager2014}. While uncertainty estimates are not needed in many mainstream machine learning use cases, they are critical in many materials science applications. Random forests also provide more interpretability than other machine learning methods. They automatically identify the most important features in a given model based on how often a feature is used in splitting criteria and what the aggregated information gain is over those splits. These feature importance metrics can provide insights into how the model is making its predictions. 
+Dimensionality reduction algorithms identify which parameters are relevant to model in an ICME approach and which are not, informing future ICME investigations of faster simulation routes to achieve the same result. The dimensionality reduction techniques covered in this review can be broadly classified into three mathematical frameworks: statistical modeling, matrix factorization, and similarity analysis.
 
-%\begin{figure}[t]
-%\begin{center}
-%\includegraphics [width=65mm]{Images/randomforest2.eps}
-%\end{center}
-%\caption{Schematic of the random forest algorithm. The training data are randomly subsampled via bagging, and each bag is used to train a decision tree. All trees have an equal vote toward the final prediction.} 
-%\label{fig:randomforest} 
-%\end{figure}
+Statistical analysis approaches can be employed to determine the parameters in $\mathbf{x}$ that strongly impact material properties. This knowledge allows designers to only model the physics impacting that property, screening out unnecessary simulations. Statistical analysis methods take many simulations of a model $f(\mathbf{x})$ and determine which parameters in $\mathbf{x}$ are most often correlated with each other or with the result $f(\mathbf{x})$. Dimensionality reduction through statistical analysis is similar to data-driven design of experiments, where statistical regression models are fit to the inputs and outputs of simulation to ascertain regions of high or low uncertainty in the design space.
 
-Random forests have been applied successfully to a range of applications in materials science. They have been used to discover new Heusler compounds~\cite{Oliynyk2016} and new thermoelectric materials~\cite{Gaultois2016}. They have also been used to model material properties such as thermal conductivity in half-Heusler semiconductors ~\cite{Carrete2014} and to break down fields for dielectrics~\cite{Kim2016}. Ling et al.~\cite{Ling2017} demonstrated how random forest models with jackknife-based uncertainty estimates could be used for experimental design in materials science. The application of machine learning for experimental design is particularly compelling for AM, where there are many processing steps that affect build quality. 
+Kamath utilized random forests to screen out irrelevant modeling parameters for predicting maximum density of additively manufactured parts \cite{Kamath2016}. Kamath started with an experimental dataset of manufacturing parameters and multiple modeling methods. An Eagar-Tsai simulation of a Gaussian laser beam on a powder bed was used to model thermal conduction during manufacture. The model originally began with four inputs (laser power, speed, beam size, and powder absorptivity) and a design space of 462 possible input combinations. The model was also supplemented with an experimental dataset of single-track builds. Kamath utilized random forests to determine which input was most important for achieving fully dense parts.
 
-Kamath utilized random forests among other machine learning techniques to predict melt pool depths based on the results of an Eagar--Tsai model for powder melting \cite{Kamath2016}. The Eagar--Tsai model uses a Gaussian laser beam incident on a metal substrate and models the temperature distribution throughout a bed of powder. Kamath was seeking to understand the most important laser parameters to use for predicting a melt pool's size and shape. Kamath started with the inputs of the Eagar--Tsai model and ordered them based on their numerical value. Then, a random forest algorithm was built that split variables based on the standard deviation of their associated output. The main idea was that variables that had a high impact would have a low standard deviation in their associated outputs. Using this method, they found that laser speed and power were the most important inputs for determining the melt pool depth and shape. After determining the most important inputs, the same regression tree was applied in order to find optimized manufacturing conditions for fully dense parts, using the same method.
+The main idea in Kamath's study was that variables that had a high impact would have a low standard deviation in their associated outputs as measured by the statistical (random forest) model. Using this method, they found that laser speed and power were the most important inputs out of the four to determine melt pool depth and shape. Thus, model predictions made using only these can be relied upon for their results.  After determining the most important inputs, the same regression tree was applied in order to find optimized manufacturing conditions for fully dense parts, using the same method. 
 
-Kamath's study also highlights a theme across studies of AM: the process combines separately known physics across separate domains. For example, a laser physics model will have a set of descriptors for describing the laser's behavior, while a solidification model will have a separate set of descriptors for itself. Descriptions across separately contained models do not obviously demonstrate how the descriptors interact, or which descriptors from one model are important to include in the other model. Science has long benefited from simple models, possibly empirical, which provide a small amount of physical descriptors to model specific properties. Machine learning algorithms can search through physical parameters used to model AM to find the lowest dimensional description which explains the widest swath of phenomenon. This is desirable for building computationally accessible models.
+Similarity analysis is a dimensionality reduction technique that identifies similar manufacturing conditions out of a high dimensional design space. Ascertaining the distribution of machine inputs in the full AM design space is clouded by the dimension of the space. There are many possible ways to fit distributions in a space of tens of coordinates. Basic similarity metrics, like the vector norms introduced in Section II, are useful for vectors with only a few entires. When dealing with the large input and output size of AM, a vector distance approach does not accurately reflect similarities or differences between vectors containing model data. Similarity analysis such as t-distributed Stochastic Neighborhood Embedding (tSNE) measures distances in a high dimensional space and then projects data points onto a two dimensional plot. Points which are close together in the high dimensional sense appear close together on the two dimensional plot. This dimensionality reduction technique guides modelers as to what simulation conditions will reveal similar results. Furthermore, these 2D projects provide clusters of inputs and outputs which are similar in the high dimensional space. Analysis of these clusters can inform modelers as to correlations within their inputs and outputs, identifying which parameters can be screened out to save complexity.
 
-The many different computational models of AM, whether they are finite/direct element, central difference, phase field, or otherwise can all be upscaled to describe more and more physics.  Interaction potentials between forces during manufacturing can be added to models, requiring more input descriptors. Take, for example, a finite element model that describes thermal flux through a system from the interaction of a laser on a powder bed \cite{Khairallah2016}. There are many physics to consider here -- the energy transfer of the laser on the powder bed, movement of powder, phase change from powder to melt pool, thermal fluid mass transfer in the melt pool, convective, cooling, and radiative heat loss, and more. The full-physics model may have \textit{many} inputs $\mathbf{x} = (x_1,x_2,...,x_n)$ where $n$ is large.
-
-The original, full-physics model produces a relationships $y = f(\mathbf{x})$ and may be computationally expensive, creating a bottleneck for process design and knowledge generation. A more computationally accessible model $y^*(\mathbf{x^*})$ would be desirable. In this case, the set of descriptors $\mathbf{x^*}$ consists of a subset of descriptors from $\mathbf{x}$, but is a much smaller set and requires less computational resources. 
-
-Stated otherwise, the goal is to solve the objective function
-\begin{equation}
-	\text{min} ||y^*{(\mathbf{x^*})} - y(\mathbf{x})||
-	\label{obj}
-\end{equation}
-such that $\{\mathbf{x^*} = \left(x_i...x_m\right) \in \mathbf{x} | m << n\}$
-
-Finding the solution to Eqn, \ref{obj} can be achieved by fitting random sampling of descriptors from $\mathbf{x}$ and creating regression models on the outputs of the original model $y(\cdot)$. Presumably, the original full-physics model has been run and evaluated for accuracy. This means the researcher has a set of computationally-generated data $y$ as well as the inputs used to assess the model $\mathbf{x}$. 
-
-Various subsets of the model inputs $\mathbf{x^*}_i$ can be chosen by randomly sampling the full list of inputs $\mathbf{x}$ repeatedly. Each subset of inputs can then be regressed upon, perhaps by using least squares regression
-\begin{equation}
-	\text{min} ||\mathbf{Y} - \mathbf{X^*_i} \mathbf{c_i}||
-	\label{obj2}
-\end{equation}
-where $\mathbf{Y} = (y_1,y_2,...,y_n)$ are the outputs of the full-physics model, $\mathbf{X} = \left[ \mathbf{x^*} ,\mathbf{x^*},...,\mathbf{x^*}\right]^T$ is an $n \times m$ matrix of the subset of inputs, and $\mathbf{c}$ is a vector of weighting coefficients. This produces a randomly-generated model $y^*(\mathbf{x^*_i}) = \mathbf{X^*_i}\mathbf{c_i}$ which may or may not be able to accurately reproduce $y(\cdot)$. To find the \textbf{best} subset of inputs, one can solve 
-\begin{equation}
-	\underset{\mathbf{c}}{\text{min}}|| \mathbf{Y} - \mathbf{X^*_i} \mathbf{c_i}|| + \lambda||\mathbf{c_i}||
-	\label{KRR}
-\end{equation}
-which is the objective equation for a machine learning method known as Kernel Ridge Regression (KRR). The idea behind Eqn. \label{KRR} is that it is a feasible minimization problem from a complexity perspective, i.e. it is convex. KRR is the basis of a descriptor set investigation performed by Ghiringhelli et al. to find the lowest dimensional descriptor for predicting crystal structure.They were able to identify one-dimensional, two-dimensional, and three-dimensional descriptors that were all shown to be the ``best'' combinations of descriptors out of any $n$-tuple \cite{Ghiringhelli2015}. Better physical descriptors are often found by combinatorial analysis of as many independent variables and dependent variables as possible. The `best' descriptors found experimentally are usually judged based on the amount of physics they are able to reproduce. Using descriptor analysis, as Ghiringhelli did, experimentalists can find the best descriptors as quickly as possible. Then, when trying to predict material properties in the future, researchers know which descriptors to use or combine.
+A final dimensionality reduction technique requires expressing model data in a matrix. For a dataset of model inputs and results, a matrix can be formed $\mathbf{X}$ whose rows are the machine inputs, calculated properties, and simulation conditions contained in the vector $\mathbf{x}_i$. Matrix factorization techniques re-represents correlations in large datasets in a simplified way. The matrix $\mathbf{X}^T\mathbf{X}$ is the covariance of $\mathbf{X}$, or the amount of cross-correlated information between the model parameters. The matrix $\mathbf{X}^T\mathbf{X}$ can be very large due to the design space of additive manufacturing. One type of matrix factorization, called Principal Component Analysis (PCA) re-represents the data matrix $\mathbf{X}$ as
+\eqn
+	\mathbf{X} = \mathbf{U} \mathbf{\Sigma}^T
+	\label{PCA}
+\equ
+where the rows of $\Sigma$ are the eigenvectors of $\mathbf{X}^T\mathbf{X}$ and the diagonal entries of $\mathbf{U}$ are the square root of the eigenvalues $\sqrt{\lambda}$. PCA operates such that the first eigenvector in $\Sigma$ indicates the most heavily correlated inputs of $\mathbf{X}$. The length of vectors in $\Sigma$ is $p$ many variables long. In cases where the original design space size $n$ is large, the size of $p$ is often much less than $n$, reducing the dimension of the problem. Regression can be performed on one, a few, or many of the eigenvectors in $\Sigma$ to predict new model results using considerably less information than that contained in $\mathbf{X}$. Some studies have gone as far as to understand which correlations are being represented by the eigenvectors in $\Sigma$, revealing inputs or phenomenon which can be ignored during modeling. Such analysis is possible in AM, though requires further processing steps past matrix factorization. Materials science studies has utilized PCA previously to re-represent large datasets in simpler forms, such as predicting the formation energies of crystal structures from a lower dimensional space \cite{Curtarolo2003}. A review of applications of PCA in materials science can be found at \cite{Rajan2009}.
