--- a/nate-am-review/SectionIII/KnowledgeTransfer.tex
+++ b/nate-am-review/SectionIII/KnowledgeTransfer.tex
@@ -7,10 +7,8 @@ Even a \textit{single} modeling method -- just FEA, phase field, CALPHAD, etc --
 
 In traditional ensemble modeling approaches, many different regression models are trained to model a relationship $y = f(\mathbf{x})$, all trained on different subsets of the data. For a given input $\mathbf{x_1}$ all regression models are assessed and various outputs predicted, $f_1(\mathbf{x}), f_2(\mathbf{x}), ..., f_n(\mathbf{x})$ out of $n$ many models trained. These data sets for additive may be the inputs and solutions of a solidification or heat transfer model, or experimentally obtained relationships.
 
-The ensemble method relies upon taking a vote from the results of all models, either by picking the solution that was guessed the most or taking the average of solutions, or something else. In the AM case, where models may overlap or have experimental data associated with them this type of approach can screen out noise from simulations or experiments to gauge a more fundamental relationship. The uncertainties associated with a model -- models are, after all, only partially representative of reality -- can be weighted by the experimentally observed data points. Furthermore, predictions can be made across many different physical models, resulting in a predictive method for holistic analysis of the final properties.
+The ensemble method relies upon taking a vote from the results of all models, either by picking the solution that was guessed the most or taking the average of solutions, or something else. In the AM case, where models may overlap or have experimental data associated with them this type of approach can screen out noise from simulations or experiments to gauge a more fundamental relationship. The uncertainties associated with a model can be weighted by the experimentally observed data points. Furthermore, predictions can be made across many different physical models, resulting in a predictive method for holistic analysis of the final properties.
 
 Meredig et al. applied this method to the prediction of ABC (ternary) compounds \cite{Meredig2014}. Instead of running high-throughput DFT simulations on the combinatorial space of all possible ABC compounds, they used lower order simulations. Tests were run for AB, AC, and BC compounds to predict the formation energies of ternary compounds.
 
 The results of these simulations can then be used as fingerprint descriptors for predicting the results of more complicated interactions, as shown by Meredig et al. For example, classification and regression algorithms can be trained on previously run simulations in order to learn which physical phenomena impact the formation of certain defects. Predictive algorithms can then be used to interpret how the combination of these individual results might impact the overall physics of defect formation, such as keyhole porosity. This is done using metrics of distance, as discussed earlier. 
-
-Of course, we are not limited to statistical sampling of computational models alone. Statistical sampling of a wide enough swath of empirical results can also produce robust results. 
