--- a/nate-am-review/SectionIII/SurrogateModeling.tex
+++ b/nate-am-review/SectionIII/SurrogateModeling.tex
@@ -1,7 +1,12 @@
 \subsubsection{Surrogate Modeling}
+Dimensionally reduced models are useful for engineering applications where few properties are being studied at a time, or when computational burden hinders development time considerably. Full-physics modeling is quite necessary to understand how physics at different scales interact to impact the AM process. Full physics models, however, can be expensive and time consuming to run. Phenomenon which are difficult to study experimentally, such as flow within the melt pool, are best studied through modeling approaches. If a model's computational expense is \textit{too} high then performing simulations at all relevant manufacturing conditions can be impossible. Machine learning algorithms can use the results of previously run high fidelity simulations to fill in the gaps and reduce development time.
 
-If the criterion for model success is prediction accuracy, then we are not limited to physics-based computational models for data mining. Applying machine learning to a multitude of data -- empirical and computational -- can sample and predict results just as well. A \textit{surrogate model} is a mathematical approximation that can take inputs to numerical simulations and predict the results of a simulation, without actually performing the computation \textbf{\textit{or}} take the independent variables of an experiment and predict measurement values. This is done through statistical sampling of previously run models/experiments, analogous to the manner in which Kamath et al. utilized random forests, or how lower order models can be used to predict the results of higher order models. They have the added benefit of use for inverse design of materials or manufacturing conditions. 
+A \textit{surrogate model} is a mathematical approximation that predicts the results of AM simulations without actually performing the computation. Surrogate models preclude the need for running computationally expensive simulations for every possible manufacturing condition. The results of previous data-intensive simulations can be used in regression models to predict the results a simulation \textit{would have} given, if it had actually been performed. Surrogate models can be as simple as linear regression between simulation inputs and results. The accuracy of a surrogate model is dependent upon how many previous simulations have been run and on how many different points in the design space.
 
-Tapia et al. built a surrogate model for laser powder fusion of 316L stainless steel. They were concerned with predicting the melt pool depth of single-track prints solely from the laser power, velocity, and spot size \cite{Tapia2017}. Data were taken from several different sources. A few datasets were computationally derived, based on previous simulation methods used by the same research team \cite{King2014, Khairallah2016}. They ran powder bed simulations at various laser powers, velocities, and spot sizes, and the model told them the depth of the melt pool, among other information. Their dataset also included some experimentally obtained values of the same information. The combination of these datasets provided enough information for the surrogate model to search a combinatorial design space of manufacturing conditions in a wide enough scope to find local maxima of quality.
+Tapia et al. built a surrogate model for laser powder bed fusion of 316L stainless steel. They were concerned with predicting the melt pool depth of single-track prints solely from the laser power, velocity, and spot size \cite{Tapia2017}. Data were taken from several different sources. A few datasets were computationally derived, based on previous simulation methods used by the same research team \cite{King2014}. In particular, they used the results from a computationally expensive but high-accuracy melt pool flow model of Khairallah et al. \cite{khairallah2016}. They ran powder bed simulations at various laser powers, velocities, and spot sizes, and the model told them the depth of the melt pool, among other information. The datasets provided enough information for a surrogate model to be trained to predict simulation results.
 
-To build this model, Tapia et al. used a regression model known as a Gaussian process model (GPM). All data in a GPM is assumed to be evenly distributed in a multivariate normal manner. As with many machine learning models, trends in inputs and outputs in a GPM are elucidated through the covariance of the dataset. Starting with the covariance of their inputs, Tapia et al. used Bayesian statistics to develop a probabilistic model that predicted melt pool depth for the given input parameters. They were able to successfully predict the outcomes of both high-fidelity simulations and experimental measurements solely by analyzing trends in previously obtained results. In particular, they were able to accurately predict the melt pool depth at a value that had never been observed before, either computationally or experimentally. 
+To build this model, Tapia et al. used a machine learning model known as a Gaussian process model (GPM). All data in a GPM is assumed to be evenly distributed in a multivariate normal manner. As with many machine learning models, trends in inputs and outputs in a GPM are elucidated through the covariance of the dataset. Starting with the covariance of their inputs, Tapia used Bayesian statistics to develop a probabilistic model that predicted melt pool depth from simulation inputs. They were able to successfully predict the outcomes of both high-fidelity simulations and experimental measurements solely by analyzing trends in previously obtained results. In particular, they were able to accurately predict the melt pool depth at a value that had never been observed before, either computationally or experimentally. 
+
+Gaussian process models have benefits beyond their surrogate modeling capabilities. GPM provide robust uncertainty metrics on the predictions they make. Uncertainty in prediction is important in materials informatics, especially when datasets may not yet be large enough to trust a model's results from data size alone. Another benefit of GPM is that it permits inverse design. GPM regression models can explicitly identify regions of the design space which will maximize or minimize a value.
+
+Surrogate modeling adds functionality to AM modeling by reducing the number of expensive simulations to run and also providing inverse design from high fidelity models. These benefits become especially important as more and more physical phenomenon are added to AM models. Another approach to countering the curse of dimensionality in AM is to build high-fidelity models based on the results of low-fidelity models \textbf{Transition into fingerprint modeling section}.
